[package]
name = "chancela-cmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Chave Movel Digital qualified remote-signature SOAP client (AMA SCMD); produces a RawSignature (spec 04, SIG-02)."

[dependencies]
chancela-cades = { workspace = true }
reqwest = { workspace = true }
quick-xml = { workspace = true }
base64 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
x509-cert = { workspace = true }
der = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Enables `#[ignore]`d tests that hit the real SCMD preprod endpoint. Never runs in CI.
network-tests = []
