[package]
name = "chancela-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain core for Chancela: entities, books (livros de atas), acts (atas), sealing, and compliance rule packs."

[dependencies]
chancela-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
