[package]
name = "chancela-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server exposing the platform's operations as permission-gated tools. Authenticates to the integration API (/api/v1) with an API key; stdio transport; OFF by default (t65-E2, spec AI-10/11/12)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
# Blocking HTTP client for the api-key bridge: the MCP server calls /api/v1 over loopback with a
# configured key. `blocking` keeps the whole server synchronous (a newline-delimited JSON-RPC stdio
# loop), so no async runtime is pulled in on our side. Workspace-inherited (identical features).
reqwest = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
chancela-api = { workspace = true }
chancela-authz = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "chancela-mcp"
path = "src/bin/chancela-mcp.rs"
