[package]
name = "chancela-pades"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PAdES-B PDF signing (incremental update) + structural validation (spec 04, SIG-21)."

[dependencies]
chancela-cades = { workspace = true }
chancela-tsa = { workspace = true }
lopdf = { workspace = true }
sha2 = { workspace = true }
der = { workspace = true }
x509-cert = { workspace = true }
cms = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rsa = { workspace = true }
p256 = { workspace = true }
time = { workspace = true }
