[package]
name = "chancela-signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
# Signature-middleware crates this rework orchestrates (t4-e8). Wired here by t4-e1 so the
# rework never touches this manifest. See .orchestration/plans/t4.md §2.1.
chancela-cades = { workspace = true }
chancela-smartcard = { workspace = true }
chancela-cmd = { workspace = true }
chancela-tsl = { workspace = true }
chancela-tsa = { workspace = true }
chancela-pades = { workspace = true }
# XMLDSig + XAdES (B/T) over the shared RawSignature seam; consumed by the local ASiC lanes
# (ASiC-S/XAdES, ASiC-E multi-signature). Public API only — no cycle (xades is a leaf, t67 §1.1).
chancela-xades = { workspace = true }
# CSPRNG (rand_core::OsRng) for PROD CMD field encryption via chancela-cmd's
# FieldEncryptor::AmaRsa (caller-supplied `&mut R: CryptoRngCore`). See root manifest.
rand_core = { workspace = true }
zeroize = "1"
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
base64 = { workspace = true }
quick-xml = { workspace = true }
# Read-only XML parse for the full-ASiC validation surface (XAdES reference binding + archive
# manifest parsing); mirrors chancela-xades/src/validate.rs. Already pinned in the workspace.
roxmltree = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
# RFC 3161 token parsing for ASiCArchiveManifest archive-timestamp imprint binding (same crates
# chancela-pades uses for /DocTimeStamp). No new pins: cms 0.2 / x509-tsp 0.1 are workspace-pinned.
cms = { workspace = true }
x509-tsp = { workspace = true }
# Software-certificate foundation: parse/decrypt PKCS#12/PFX material and sign locally with
# supported software private keys. `p12` is pure Rust and stays on the existing der-0.7-era stack
# instead of pulling OpenSSL/native dependencies or RustCrypto pkcs12's der-0.8 pre-release line.
p12 = "0.6.3"
rsa = { workspace = true }
p256 = { workspace = true }
x509-cert = { workspace = true }
x509-ocsp = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
