[package]
name = "chancela-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Durable ARC-20 sync and backup job worker for Chancela"

[dependencies]
chancela-connectors = { path = "../chancela-connectors" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
