[package]
name = "chancela-zk"
description = "Zero-knowledge repository envelope and portable-readability contracts for Chancela"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
